[package]
name = "adrop"
version = "0.2.0"
authors = ["CedarHuang <cedar.hxd@gmail.com>"]
license = "Apache-2.0"

description = "Simple and fast dedicated thread drop."
readme = "README.md"
documentation = "https://docs.rs/adrop"

repository = "https://github.com/CedarHuang/adrop"
keywords = ["drop", "simple", "fast", "destruct", "destroy"]
categories = ["rust-patterns", "memory-management"]

[dependencies]
lazy_static = "1.4"